Fixed problem with iframes on iPhones

--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,12 @@ input[type=submit] {
 textarea {
     font-size: 1.5em;
 }
+iframe {
+    width: 1px;
+    min-width: 100%;
+    *width: 100%;
+    height: 60%;
+}
 
 
 /* Feature Image */
